# WinterSolstice

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
CMakeTools/: IncludeBoost.cmake  OpenGL.cmake  Options.cmake
WinterSolstice-Core/: CMakeLists.txt  WinterSolstice.h  k423.cpp  k423.h
WinterSolstice-Core/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLMeshShader.cpp  OpenGLMeshShader.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
WinterSolstice-Core/Platform/Window/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
WinterSolstice-Core/Platform/load/entt/: entt.hpp
WinterSolstice-Core/Platform/load/stb_image/: stb_image.cpp
WinterSolstice-Core/WinterSolstice/Animation/: Animation.cpp  Animation.h  AnimationBone.cpp  AnimationBone.h  Bone.h
WinterSolstice-Core/WinterSolstice/Camera/: Camera.h  EditorCamera.cpp  EditorCamera.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  SceneCamera.cpp  SceneCamera.h
WinterSolstice-Core/WinterSolstice/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  StructBase.cpp  StructBase.h  Time.h  Timestep.h  True.cpp  True.h  Window.h
WinterSolstice-Core/WinterSolstice/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
WinterSolstice-Core/WinterSolstice/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
WinterSolstice-Core/WinterSolstice/Light/: Light.cpp  Light.h  PlanceLight.cpp  PlanceLight.h  PointLight.cpp  PointLight.h  SkyBox.cpp  SkyBox.h  SpotLight.cpp  SpotLight.h
WinterSolstice-Core/WinterSolstice/Math/: Math.cpp  Math.h
WinterSolstice-Core/WinterSolstice/Object/: BVH.cpp  BVH.h  BVHImp.cpp  BVHImp.h  Bounds3.cpp  Bounds3.h  DrawCall.h  Loder.cpp  Loder.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  Ray.h  Triangle.cpp  Triangle.h
WinterSolstice-Core/WinterSolstice/Render/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererCommand.cpp  RendererCommand.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
WinterSolstice-Core/WinterSolstice/Scene/: Components.h  Entity.cpp  Entity.h  KdTree.cpp  KdTree.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  ScritableEntity.h
WinterSolstice-Core/WinterSolstice/Utils/: PlatformUtils.h  ThreadPool.h
WinterSolstice-Editory/: CMakeLists.txt  EditorLayout.cpp  EditorLayout.h  KyBaoEditor.cpp
WinterSolstice-Editory/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
WinterSolstice-Editory/ScreenPostProcessing/: ScreenPostProcessing.cpp  ScreenPostProcessing.h
WinterSolstice-Editory/assets/shaders/: FlatColor_fs.glsl  FlatColor_vs.glsl  Light_fs.glsl  Light_vs.glsl  Model_fs.glsl  Model_vs.glsl  Renderer2D_Circle.glsl  Renderer2D_Quad.glsl  Texture_fs.glsl  Texture_vs.glsl  compute_shader.glsl
WinterSolstice-Editory/assets/shaders/GBuffer/: deferred - 副本.fs  deferred.fs  deferred.vs  g_Buffer - 副本.fs  g_Buffer.fs  g_Buffer.vs  test_buffer.fs  test_buffer.vs
WinterSolstice-Editory/assets/shaders/HDR/: Blur.fs  FFT.fs  HDR.fs  HDR.vs  Result.fs
WinterSolstice-Test/: CMakeLists.txt  Test.cpp  TestLoader.h
WinterSolstice-Test/assets/SceneXML/: Scene.xml
WinterSolstice-Test/assets/shaders/: Base3D_fs.glsl  Base3D_vs.glsl  Model_vs.glsl  Texture_fs.glsl  Texture_vs.glsl
